# pysignal

./: mypy.ini  pyproject.toml
.github/workflows/: development.yaml
tests/: test_signals.py
