[tool.poetry]
name = "pysignal"
version = "0.1.0"
description = "Simple, easy and lightweight callback library based on the idea of 'signals' for Python."
authors = ["Marvin Alvarenga <marvinalexz@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
